@@ -1,4 +1,13 @@
+2004-06-23  Philippe Gerum  <rpm@xenomai.org>
+
+	* include/nucleus/asm-i386/system.h (xnarch_thread_redirect): 
+	Force regparm(0) so that we are still safe if CONFIG_REGPARM is
+	enabled.
+
 2004-06-21  Philippe Gerum  <rpm@xenomai.org>
+
+	* arch/i386/hal/hal.c (rthal_domain_entry): Disable sync (debug)
+	mode for printk().
 
 	* nucleus/lib/fusion.c (pthread_migrate_rt): Directly use the
 	nucleus-based migration service: this one works properly in all
